# signal-persona-auth

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  skills.md
examples/: canonical.nota
src/: lib.rs  names.rs  origin.rs
tests/: canonical_examples.rs  round_trip.rs  version.rs
