[package]
name = "signal-persona-auth"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Persona origin-context Signal contract records."
license = "MIT"

[dependencies]
rkyv = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-core = { git = "https://github.com/LiGoldragon/signal-core.git" }
nota-codec = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }

[dev-dependencies]
pretty_assertions = "1"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
